--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "deploy": "npm run build && git checkout gh-pages && git rm -rf . && cp -r dist/* . && git add . && git commit -m \"Deploy from main\" && git push origin gh-pages && git checkout main"
   },
   "keywords": [
     "wellness",
