--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "Quality of Life - Your Wellness Companion",
   "type": "module",
-  "homepage": "https://kiruthika-ponnan.github.io/quality-of-life-web",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "deploy": "npm run build && git checkout gh-pages && git rm -rf . && cp -r dist/* . && git add . && git commit -m \"Deploy from main\" && git push origin gh-pages && git checkout main"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "keywords": [
     "wellness",
@@ -33,7 +31,6 @@
     "@types/node": "^18.15.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
-    "gh-pages": "^6.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
